--- a/gcal/deadlines.html
+++ b/gcal/deadlines.html
@@ -328,7 +328,7 @@ Submission Guidelines<br />
 ================================<br />
 Accepted papers will be published in Cluster Computing: The Journal of Networks, Software Tools and Applications. Please follow the submission guidelines for Cluster Computing when preparing your manuscript for the INDIS 2020 special issue: <a href="https://www.springer.com/journal/10586/submission-guidelines">https://www.springer.com/journal/10586/submission-guidelines</a></p>
 <p>Special issue papers must be submitted electronically at <a href="https://www.editorialmanager.com/clus/default.aspx">https://www.editorialmanager.com/clus/default.aspx</a> and must use Springer’s LaTeX macro package (choose the formatting option “twocolumn”), which can be found here: <a href="https://www.springer.com/journal/10586/submission-guidelines.">https://www.springer.com/journal/10586/submission-guidelines.</a> When starting a new submission, please select the special issue INDIS-2020 from the drop down list.</p>
-<p>For extended workshop papers, the paper should have a new title, a new abstract, and about 40-50% of new content in comparison to the original workshop paper.</p>
+<p>For extended workshop papers, the paper should have a new title, a new abstract, and about 40-50％ of new content in comparison to the original workshop paper.</p>
 <p>================================<br />
 Projected Timeline<br />
 ================================<br />
