--- a/gcal/fundhunt.html
+++ b/gcal/fundhunt.html
@@ -6,6 +6,88 @@
 2020-09-01 <a href="#79792e2a8d">三谷産業フェア★金沢</a><br />
 2020-09-11 <a href="#7ac92177c4">本多記念賞200万・50万・30万.2items</a><br />
 2020-09-30 <a href="#70159d238b">airpf人工知能研究振興財団</a></p>
+<h2 id="国立研究開発法人科学技術振興機構.ioe社会のエネルギーシステム-2020-07-22-top"><strike>国立研究開発法人科学技術振興機構.「IoE社会のエネルギーシステム」</strike> (2020-07-22) <span id="ea6becef05"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
+<p>年度 2020年度<br />
+募集機関・財団名 国立研究開発法人科学技術振興機構<br />
+事業名 戦略的イノベーション創造プログラム（SIP）「IoE社会のエネルギーシステム」<br />
+リンク <a href="https://www.jst.go.jp/sip/p08/koubo_2020.html">https://www.jst.go.jp/sip/p08/koubo_2020.html</a><br />
+課題詳細 戦略的イノベーション創造プログラム（SIP）は、科学技術イノベーション総合戦略（平成25年6月7日閣議決定）及び日本再興戦略（平成25年6月14日閣議決定）において、総合科学技術会議が司令塔機能を発揮し、科学技術イノベーションを実現するため創設することが決定しました。 SIPは、府省・分野を超えた横断型のプログラムであり、総合科学技術会議が課題を特定し、予算を重点配分するものであり、課題ごとにPD(プログラムディレクター）を選定し、基礎研究から出口（実用化・事業化）までを見据え、規制・制度改革や特区制度の活用等も視野に入れて推進していくものです。<br />
+応募者詳細 ・自らの研究開発構想に基づき、産学連携を含めその構想の実現に適した実施体制を構築し、研究責任者として当該研究開発テーマを推進できる研究者であること。<br />
+・研究開発項目に係る分野において、研究蓄積を有するとともに、研究実施において必要となる関係者との連携や協力体制が構築できる活動実績を有すること。<br />
+・国内の研究機関※に所属して研究開発を実施できること。<br />
+※「国内の研究機関」：国内に法人格を持つ大学、独立行政法人、国公立試験研究機関、特別認可法人、公益法人等、企業等のうち、研究開発を実施している機関。<br />
+・不適正経理に係る申請資格の制限等に抵触していない研究者であること。<br />
+・所属研究機関において、研究倫理教育に関するプログラムを予め修了していること。または、JSTが提供する教育プログラムを所定の時期までに修了していること。<br />
+※詳しくは、公募要領「研究倫理教育に関するプログラムの受講・修了について」をご参照ください。<br />
+助成期間 (最短) 1年 から (最長) 3年<br />
+助成率 -<br />
+限度額 999,999,999千円<br />
+採用予定数 -<br />
+申請期限 2020年07月22日 募集状況 募集中<br />
+<span style="color:#666;"><a href="#top">→top</a></span></p>
+<h2 id="国土技術政策総合研究所データ結合999.999.999千円-2020-08-05-top"><strike>国土技術政策総合研究所・データ結合999.999.999千円</strike> (2020-08-05) <span id="b45e39cd0b"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
+<p>年度 2020年度<br />
+募集機関・財団名 国土技術政策総合研究所<br />
+事業名 インフラに関するデータ連携を目的としたメタデータの自動作成及びデータ統合技術に関する研究<br />
+リンク <a href="http://www.nilim.go.jp/lab/bbg/kyoudou/index.html">http://www.nilim.go.jp/lab/bbg/kyoudou/index.html</a><br />
+課題詳細 本委託研究は、データ連携を踏まえたデータ利活用するための技術開発として、メタデータの生成及びデータを自動で統合できる技術を開発するものである。<br />
+応募者詳細 ① 提出者の所属機関<br />
+Ⅰ　大学等の研究機関（大学共同利用機関法人を含む）<br />
+Ⅱ　国（事業団、特殊会社及び独立行政法人並びに特殊法人等改革基本法の対象法人を含む）の研究機関<br />
+Ⅲ　地方公共団体の研究機関<br />
+Ⅳ　研究を目的に持つ公益法人（特例民法法人を含む）、一般社団法人、一般財団法人<br />
+Ⅴ　民間研究機関（研究業務を行っている機関、但し、国総研における建設コンサルタント業務に係る一般競争（指命競争）参加資格の認定を受けている機関に限る）<br />
+Ⅵ　その他、特に所長が委託研究を実施することが適当であると認めた法人または個人（但<br />
+し、公募時に予め定められた条件を満たす者に限る）<br />
+Ⅶ　前Ⅰ号からⅥ号の要件を満たす複数の機関または研究者からなる共同研究体（但し、契約時に共同企業体協定書を締結した者に限る）</p>
+<p>② 提出者の資格要件<br />
+Ⅰ　予算決算及び会計令（昭和２２年勅令第１６５号。以下「予決令」という。）第７０条及び第７１条の規定に該当しない者であること。<br />
+Ⅱ　警察当局から、暴力団員が実質的に経営を支配する者又はこれに準ずるものとして、国土交通省公共事業等からの排除要請があり、当該状態が継続している者でないこと。<br />
+Ⅲ　国土技術政策総合研究所長から建設コンサルタント業務等に関し指名停止を受けている期間中の者でないこと。<br />
+Ⅳ　会社更生法（平成14年法律第154号）に基づき更生手続開始の申立てがなされている者又は民事再生法（平成11年法律第225号）に基づき再生手続開始の申立てがなされている者でないこと。<br />
+Ⅴ　①Ⅶに該当する者は、委託契約の締結を行う際には、事前に、「国土技術政策総合研究所の委託研究における共同研究体方式の取り扱いについて」（平成22年12月1日付け国土技術政策総合研究所長）に示すところにより共同研究体協定書を締結し、提出すること。<br />
+助成期間 (最短) 1年 から (最長) 1年<br />
+助成率 -<br />
+限度額 999,999,999千円<br />
+採用予定数 -<br />
+申請期限 2020年08月05日 募集状況 募集中<br />
+<span style="color:#666;"><a href="#top">→top</a></span></p>
+<h2 id="三谷産業フェア金沢-2020-09-01-top">三谷産業フェア★金沢 (2020-09-01) <span id="79792e2a8d"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
+<p><a href="https://www.mitani.co.jp/mbc/index.html#target">https://www.mitani.co.jp/mbc/index.html#target</a></p>
+<p>ICT関連における先端技術を活用した 新事業・サービス<br />
+デジタルテクノロジーの活用によるビジネスイノーベションに寄与する取組みや、<br />
+独創的なUI/UXなどの優れたデザインを活用したサービスにより、<br />
+北陸の地域課題の解決や社会の発展に寄与するビジネスプランを募集します。</p>
+<p>例：以下のテーマ × モデル・アイデア</p>
+<p>テ ー マ<br />
+①企業内の課題<br />
+・人手不足、高齢化<br />
+・設備の老朽化<br />
+・新事業の創出②地域社会の課題<br />
+・観光と食<br />
+・農業、漁業<br />
+・教育、健康、環境、医療、福祉、etc<br />
+モデル・アイデア<br />
+・最先端技術、ICT<br />
+・独創的なデザイン</p>
+<p>※2018年6月以降に提供開始、またはこれから開始予定のものであること。</p>
+<p>応募対象<br />
+01 ICT、IoT、AIといった先進技術を活用し、北陸地区の企業のビジネスの加速や、地域の生活者や企業にとって有益なサービスの創出に意欲がある法人・個人。<br />
+02 北陸でビジネスチャンスを増やしていきたい、または起業を検討している法人・個人。<br />
+03 先進的で実用的なデザインを活用したビジネスアイデアを有するクリエーター、学生等の個人・グループ</p>
+<p>本コンテストは北陸地域の活性化と先進的ソリューションの発掘を目的とし、<br />
+ビジネスアイデアの事業化に向けたサポートや既存ビジネスへの活用を模索し、<br />
+アライアンス・ビジネスマッチングの実現を図り、北陸経済・産業の活性化に貢献します。</p>
+<p>NEWS<br />
+2019.12.16<br />
+「MITANI Business Contest 2019」受賞者が決定！<br />
+2019.11.27<br />
+「MITANI Business Contest 2019」の出場企業が決定！<br />
+2019.10.24<br />
+「MITANIビジネスコンテスト2019」開催のお知らせ<br />
+2019.09.11<br />
+2018年 MITANI Business Contest 受賞者と図書館向け 「デジタル利用者カードシステム」を共同開発<br />
+<span style="color:#666;"><a href="#top">→top</a></span></p>
 <h2 id="本多記念賞200万50万30万.2items-2020-09-11-top">本多記念賞200万・50万・30万.2items (2020-09-11) <span id="7ac92177c4"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <p>募集要項概要<br />
 年度 2020年度<br />
@@ -50,42 +132,6 @@
 採用予定数 毎年５件を予定<br />
 申請期限 2020年09月11日 募集状況 募集中<br />
 <span style="color:#666;"><a href="#top">→top</a></span></p>
-<h2 id="三谷産業フェア金沢-2020-09-01-top">三谷産業フェア★金沢 (2020-09-01) <span id="79792e2a8d"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<p><a href="https://www.mitani.co.jp/mbc/index.html#target">https://www.mitani.co.jp/mbc/index.html#target</a></p>
-<p>ICT関連における先端技術を活用した 新事業・サービス<br />
-デジタルテクノロジーの活用によるビジネスイノーベションに寄与する取組みや、<br />
-独創的なUI/UXなどの優れたデザインを活用したサービスにより、<br />
-北陸の地域課題の解決や社会の発展に寄与するビジネスプランを募集します。</p>
-<p>例：以下のテーマ × モデル・アイデア</p>
-<p>テ ー マ<br />
-①企業内の課題<br />
-・人手不足、高齢化<br />
-・設備の老朽化<br />
-・新事業の創出②地域社会の課題<br />
-・観光と食<br />
-・農業、漁業<br />
-・教育、健康、環境、医療、福祉、etc<br />
-モデル・アイデア<br />
-・最先端技術、ICT<br />
-・独創的なデザイン</p>
-<p>※2018年6月以降に提供開始、またはこれから開始予定のものであること。</p>
-<p>応募対象<br />
-01 ICT、IoT、AIといった先進技術を活用し、北陸地区の企業のビジネスの加速や、地域の生活者や企業にとって有益なサービスの創出に意欲がある法人・個人。<br />
-02 北陸でビジネスチャンスを増やしていきたい、または起業を検討している法人・個人。<br />
-03 先進的で実用的なデザインを活用したビジネスアイデアを有するクリエーター、学生等の個人・グループ</p>
-<p>本コンテストは北陸地域の活性化と先進的ソリューションの発掘を目的とし、<br />
-ビジネスアイデアの事業化に向けたサポートや既存ビジネスへの活用を模索し、<br />
-アライアンス・ビジネスマッチングの実現を図り、北陸経済・産業の活性化に貢献します。</p>
-<p>NEWS<br />
-2019.12.16<br />
-「MITANI Business Contest 2019」受賞者が決定！<br />
-2019.11.27<br />
-「MITANI Business Contest 2019」の出場企業が決定！<br />
-2019.10.24<br />
-「MITANIビジネスコンテスト2019」開催のお知らせ<br />
-2019.09.11<br />
-2018年 MITANI Business Contest 受賞者と図書館向け 「デジタル利用者カードシステム」を共同開発<br />
-<span style="color:#666;"><a href="#top">→top</a></span></p>
 <h2 id="airpf人工知能研究振興財団-2020-09-30-top">airpf人工知能研究振興財団 (2020-09-30) <span id="70159d238b"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <p><a href="http://www.airpf.or.jp/josei.html">http://www.airpf.or.jp/josei.html</a></p>
 <p>年度 2020年度<br />
@@ -111,5 +157,3 @@
 採用予定数 -<br />
 申請期限 2020年09月30日 募集状況 募集中<br />
 <span style="color:#666;"><a href="#top">→top</a></span></p>
-<h2 id="国立研究開発法人科学技術振興機構.ioe社会のエネルギーシステム-2020-07-22-top"><strike>国立研究開発法人科学技術振興機構.「IoE社会のエネルギーシステム」</strike> (2020-07-22) <span id="ea6becef05"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<h2 id="国土技術政策総合研究所データ結合999.999.999千円-2020-08-05-top"><strike>国土技術政策総合研究所・データ結合999.999.999千円</strike> (2020-08-05) <span id="b45e39cd0b"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
