--- a/gcal/deadlines.html
+++ b/gcal/deadlines.html
@@ -453,85 +453,6 @@ involved.</p>
 <h1 id="workshops-and-tutorial">Workshops and Tutorial</h1>
 <p>ACM WiSec will host workshops/tutorial co-organized with the main<br />
 conference. Details will be made available on the website.</p>
-<h1 id="organisation-committee">Organisation committee</h1>
-<ul>
-<li>General Chairs<br />
-</li>
-<li>Christina Pöpper, New York University Abu Dhabi, UAE<br />
-</li>
-<li>Mathy Vanhoef, New York University Abu Dhabi, UAE<br />
-</li>
-<li>PC Chairs<br />
-</li>
-<li>Lejla Batina, Radboud University, The Netherlands<br />
-</li>
-<li>René Mayrhofer, Johannes Kepler University Linz, Austria<br />
-</li>
-<li>Reproducibility Chairs<br />
-</li>
-<li>Aanjhan Ranganathan, Northeastern University, Boston, USA<br />
-</li>
-<li>Bradley Reaves, North Carolina State University, Raleigh, NC, USA</li>
-</ul>
-<h1 id="program-committee">Program committee</h1>
-<p>• Ahmad-Reza Sadeghi, TU Darmstadt, DE<br />
-• Alexandra Dmitrienko, University Wurzburg, DE<br />
-• Bradley Reaves, North Carolina State University, US<br />
-• Cristina Onete, University of Limoges, FR<br />
-• Daniel Gruss, TU Graz, AT<br />
-• Dave Singelee, KU Leuven, BE<br />
-• David (Aziz) Mohaisen, University of Central Florida, US<br />
-• David Barrera, Carleton University, CA<br />
-• Doowon Kim, University of Tennessee, Knoxville, US<br />
-• Eleonora Losiouk, University of Padua, IT<br />
-• Erik Tews, University Twente, NL<br />
-• Fareena Saqib, University of North Carolina at Charlotte, US<br />
-• Gang Wang, University of Illinois at Urbana, US<br />
-• Gerhard Hancke, City University of Hong Kong, HK<br />
-• Gildas Avoine, Rennes, FR<br />
-• Guevara Noubir, Northeastern University, US<br />
-• Ioana Boureanu, University of Surrey, UK<br />
-• Jian (Jack) Liu, University of Tennessee, Knoxville, US<br />
-• Jiska Classen, TU Darmstadt, DE<br />
-• Jorge Guajardo, Bosch, US<br />
-• Jorge Toro-Pozo, ETH, CH<br />
-• Katerina Mitrokotsa, University of St. Gallen, CH<br />
-• Katharina Kohls, Radboud University, NL<br />
-• Kazuo Sakiyama, University of Telecommunication Tokyo, US<br />
-• Kerstin Lemke-Rust, University of Applied Sciences<br />
-Bonn-Rhein-Sieg, DE<br />
-• Kevin Butler, University of Florida, US<br />
-• Luyi Xing, Indiana University Bloomington, US<br />
-• Martin Henze, Fraunhofer FKIE, DE<br />
-• Mathy Vanhoef, NYU Abu Dhabi, UAE<br />
-• Matthias Hollick, TU Darmstadt, DE<br />
-• Matthias Payer, EPFL, CH<br />
-• Michael Roland, Johannes Kepler University Linz, AT<br />
-• Naofumi Homma, Tohoku University, JP<br />
-• Nele Mentens, Leiden University and KU Leuven, NL<br />
-• Nils Ole Tippenhauer, CISPA Saarbrucken, DE<br />
-• Nitesh Saxena, University of Alabama at Birmingham, US<br />
-• Panos Papadimitratos, KTH, SE<br />
-• Patrick Traynor, University of Florida, US<br />
-• Rolando Trujillo Rasua, Deakin Melbourne, AU<br />
-• Selcuk Uluagac, Florida International University, US<br />
-• Shivam Bhasin, NTU, SG<br />
-• Srdjan Capkun, ETH Zurich, CH<br />
-• Stjepan Picek, TU Delft, NL<br />
-• William Enck, NC State University, US<br />
-• Xiayu Ji, ZJU, CN<br />
-• Yanick Fratantonio, Cisco Talos, AT<br />
-• Yao Zheng, University of Hawaiʻi at Mānoa, US<br />
-• Yingying Chen, Rutgers University, US<br />
-• Yuan Tian, University of Virginia, US</p>
-<h1 id="steering-committee">Steering committee</h1>
-<p>• Patrick Traynor, University of Florida, USA<br />
-• Kevin Butler, University of Florida, USA<br />
-• William Enck, North Carolina State University, USA<br />
-• René Mayrhofer, Johannes Kepler University Linz, Austria<br />
-• Guevara Noubir, Northeastern University, USA<br />
-• Panos Papadimitratos, KTH Royal Institute of Technology, Sweden<br />
-• Christina Pöpper, New York University Abu Dhabi, UAE</p>
 <p><span style="color:#666;"><a href="#top">→top</a></span></p>
 <h2 id="hindawiai-2021-03-19-top">(hindawi)AI (2021-03-19) <span id="883f670b9f"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <p>Artificial Intelligence of Things (AIoT) Systems<br />
@@ -557,33 +478,31 @@ TMA 2021 Proceedings are open access, available at the IFIP Open Digital Library
 <p>The surging demand for bandwidth and the increasing heterogeneity of services are posing substantial new challenges in networking. Emerging paradigms based on the softwarization, virtualization, cloudification of the network infrastructures are fostering exciting changes in the ways we build and manage such systems. In particular, they force us to re-think traffic measurement and analysis across the whole stack, from the physical layer up to applications in the Cloud.</p>
 <p>The Network Traffic Measurement and Analysis Conference (TMA) aims at being a highly selective venue for the presentation of early-stage and mature research – as well as controversial work – on all aspects of both measurement and analysis of network traffic. The TMA conference has a strong tradition of open and lively interaction among scientists and engineers in academia and industry, and serves as a premier forum to exchange ideas, and present advances over the state-of-the-art.</p>
 <p>TMA 2021 invite submissions presenting concepts, experiences, and of course results in collection, processing, analysis and visualization of network traffic data, which may address performance enhancement, monitoring, management, security, privacy or other uses of network data. The focus is on improving the practice or application of network measurements across the entire network stack up to application layers, with an emphasis on new areas of network communication such as Network Function Virtualization, Software-Defined Networks, Cloud services, data centers or Content Distribution Networks, towards as to support innovative services and applications. We also welcome more traditional measurement topics, such as traffic classification, anomaly detection, network performance evaluation and traffic analysis.</p>
-<p>Topics of interest include, but are not limited to:</p>
-<ul>
-<li><p>Traffic measurement, analysis, characterization, visualization and classification</p></li>
-<li><p>Use of data analytics, data mining, artificial intelligence and machine learning in network measurement and analysis</p></li>
-<li><p>Use of big data, high-rate processing and data reduction in network measurement, analysis and visualization</p></li>
-<li><p>Measurements of data centers or cloud-based systems</p></li>
-<li><p>Measurements of Software-Defined Networks (SDN) and Virtual Network Functions (VNF)</p></li>
-<li><p>Measurements of home, mobile and wireless traffic including devices with multiple network paths</p></li>
-<li><p>Application-layer measurements, including web services, social networks, mobile applications</p></li>
-<li><p>Measurements of quality of service and quality of experience, for network services using audio, video, virtual/augmented reality and gaming</p></li>
-<li><p>Measurements of network performance and network structure</p></li>
-<li><p>Measurement of traditional and new protocols (e.g. TCP, MPTCP, HTTP/2, QUIC) and modes of communication (e.g. NFC and IoT)</p></li>
-<li><p>Measurements on testbeds, experimental networks or prototype networks</p></li>
-<li><p>Platforms for measurement, troubleshooting, management, and control of operational networks</p></li>
-<li><p>Simulation and modelling for network measurements, analysis and visualization</p></li>
-<li><p>Identification and classification of traffic, including encrypted and proprietary protocols</p></li>
-<li><p>Techniques for and implications of privacy preservation, enhancement and anonymization in the context of traffic measurements</p></li>
-<li><p>Applications of traffic analysis for security, anomaly/vulnerability/attack detection and user profiling/privacy</p></li>
-<li><p>Current and emerging regulatory frameworks for measurement, analysis and privacy</p></li>
-<li><p>Validation and repeatability of measurements, shared datasets, collaborative platforms</p></li>
-</ul>
-<p><strong><em>Important Dates</em></strong></p>
-<p>Paper registration: March 19 midnight CET, 2021</p>
-<p>Paper submission: March 26 midnight CET, 2021</p>
-<p>Author notification: June 16, 2021</p>
-<p>Camera ready: July 16, 2021</p>
-<p>Conference dates: Sep 13-15, 2021</p>
+<p>Topics of interest include, but are not limited to:<br />
+- Traffic measurement, analysis, characterization, visualization and classification<br />
+- Use of data analytics, data mining, artificial intelligence and machine learning in network measurement and analysis<br />
+- Use of big data, high-rate processing and data reduction in network measurement, analysis and visualization<br />
+- Measurements of data centers or cloud-based systems<br />
+- Measurements of Software-Defined Networks (SDN) and Virtual Network Functions (VNF)<br />
+- Measurements of home, mobile and wireless traffic including devices with multiple network paths<br />
+- Application-layer measurements, including web services, social networks, mobile applications<br />
+- Measurements of quality of service and quality of experience, for network services using audio, video, virtual/augmented reality and gaming<br />
+- Measurements of network performance and network structure<br />
+- Measurement of traditional and new protocols (e.g. TCP, MPTCP, HTTP/2, QUIC) and modes of communication (e.g. NFC and IoT)<br />
+- Measurements on testbeds, experimental networks or prototype networks<br />
+- Platforms for measurement, troubleshooting, management, and control of operational networks<br />
+- Simulation and modelling for network measurements, analysis and visualization<br />
+- Identification and classification of traffic, including encrypted and proprietary protocols<br />
+- Techniques for and implications of privacy preservation, enhancement and anonymization in the context of traffic measurements<br />
+- Applications of traffic analysis for security, anomaly/vulnerability/attack detection and user profiling/privacy<br />
+- Current and emerging regulatory frameworks for measurement, analysis and privacy<br />
+- Validation and repeatability of measurements, shared datasets, collaborative platforms</p>
+<p><strong><em>Important Dates</em></strong><br />
+Paper registration: March 19 midnight CET, 2021<br />
+Paper submission: March 26 midnight CET, 2021<br />
+Author notification: June 16, 2021<br />
+Camera ready: July 16, 2021<br />
+Conference dates: Sep 13-15, 2021</p>
 <p><span style="color:#666;"><a href="#top">→top</a></span></p>
 <h2 id="elsevier.fnc.future.nets-2021-03-19-top">Elsevier.FNC.future.nets (2021-03-19) <span id="0ef8079d77"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <p>The 16th International Conference on Future Networks and Communications</p>
