--- a/e580f40/readme.html
+++ b/e580f40/readme.html
@@ -1,4 +1,5 @@
 <p>このページの<a href="./readme.html">HTML版</a>は<a href="./readme.md">Markdown版</a>から自動的に生成されている。</p>
+<meta HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=UTF8">
 <style>
 code { font-weight: bold; color:#f00;border:0px;}
 </style>
