--- a/e580f40/readme.html
+++ b/e580f40/readme.html
@@ -7,7 +7,8 @@ code { font-weight: bold; color:#f00;border:0px;}
 <h2 id="marat-zhanikeev-ザニケエフマラット-履歴書への補足資料">Marat Zhanikeev (<u>ザニケエフ・マラット</u>) (履歴書への補足資料）</h2>
 <p><img style="float:right;width:20%;position:relative;display:block;border:0px;" src="photo.png"/></p>
 <p><a href="https://t.ly/SjJN">Google Scholar</a> ※現時点での<strong>h-index:9</strong> <br> <a href="https://www.slideshare.net/zhopasushami/presentations">Slideshare</a> (基本的に発表資料とその動画記録など）<br> <a href="https://github.com/maratishe">Github</a> ほとんど研究提案を実装して一般公開したもの<br> <a href="http://maratishe.github.io/">Github pages</a> ※このページのホスティング<br></p>
-<p><a href="./researchbefore.pdf">これまでの研究の概要 (PDF)</a><br> <a href="./researchafter.pdf">現在の研究活動 (PDF)</a><br> <a href="./cv.pdf">CV (PDF・4ページ)</a> <code>※そのQRコードがこのページを指している</code></p>
+<p><a href="./researchbefore.pdf">これまでの研究の概要 (PDF)</a><br> <a href="./researchafter.pdf">現在の研究活動 (PDF)</a><br><br />
+<a href="./cv.pdf">CV (PDF・4ページ)</a> <code>※そのQRコードがこのページを指している</code></p>
 <div style="height:30px;">
 
 </div>
