--- a/5dae7e21/readme.html
+++ b/5dae7e21/readme.html
@@ -1,5 +1,5 @@
 <p>the <a href="./readme.html">HTML version</a> of this page is generated automatically from the <a href="./readme.md">Markdown version</a>.</p>
-<!-- -*- coding: UTF8 -*- -->
+<!-- -*- encoding: UTF8 -*- -->
 <meta HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=UTF8">
 <style>
 code { font-weight: bold; color:#f00;border:0px;}
