--- a/5dae7e21/readme.html
+++ b/5dae7e21/readme.html
@@ -1,4 +1,5 @@
-<p>the <a href="./readme.html">HTML version</a> of this page is generated automatically from the <a href="./readme.md">Markdown version</a>.</p>
+<p>The <a href="./readme.html">HTML version</a> of this page is generated automatically from the <a href="./readme.md">Markdown version</a>.</p>
+<p>There are also <a href="http://maratishe.github.io/5dae7e21/">English</a> and <a href="http://maratishe.github.io/e580f40/readme.html">Japanese</a> versions of this document.</p>
 <!-- -*- encoding: UTF8 -*- -->
 <meta HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=UTF8">
 <style>
