--- a/e580f40/readme.html
+++ b/e580f40/readme.html
@@ -1,4 +1,5 @@
 <p>このページの<a href="./readme.html">HTML版</a>は<a href="./readme.md">Markdown版</a>から自動的に生成されている。</p>
+<p>また、この原稿に <a href="http://maratishe.github.io/5dae7e21/">英語版</a> と <a href="http://maratishe.github.io/e580f40/readme.html">日本語版</a> 、 両方がある。</p>
 <!-- -*- encoding: UTF8 -*- -->
 <meta HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=UTF8">
 <style>
